Attempt to fix wake up lag

--- a/arch/arm/configs/cyanogenmod_t0lte_defconfig
+++ b/arch/arm/configs/cyanogenmod_t0lte_defconfig
@@ -132,6 +132,7 @@ CONFIG_ASHMEM=y
 CONFIG_EMBEDDED=y
 CONFIG_HAVE_PERF_EVENTS=y
 CONFIG_PERF_USE_VMALLOC=y
+CONFIG_SPEEDUP_KEYRESUME=y
 
 #
 # Kernel Performance Events And Counters
