--- a/arch/arm/configs/fusion_t0lte_defconfig
+++ b/arch/arm/configs/fusion_t0lte_defconfig
@@ -26,7 +26,7 @@ CONFIG_GENERIC_HWEIGHT=y
 CONFIG_GENERIC_CALIBRATE_DELAY=y
 CONFIG_NEED_DMA_MAP_STATE=y
 CONFIG_VECTORS_BASE=0xffff0000
-# CONFIG_ARM_PATCH_PHYS_VIRT is not set
+CONFIG_ARM_PATCH_PHYS_VIRT=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
@@ -38,7 +38,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-Nameless"
+CONFIG_LOCALVERSION="-Fusion"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -54,7 +54,7 @@ CONFIG_SYSVIPC_SYSCTL=y
 # CONFIG_BSD_PROCESS_ACCT is not set
 # CONFIG_FHANDLE is not set
 # CONFIG_TASKSTATS is not set
-# CONFIG_AUDIT is not set
+CONFIG_AUDIT=y
 CONFIG_HAVE_GENERIC_HARDIRQS=y
 
 #
@@ -141,7 +141,7 @@ CONFIG_PERF_EVENTS=y
 # CONFIG_PERF_COUNTERS is not set
 # CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 CONFIG_VM_EVENT_COUNTERS=y
-CONFIG_SLUB_DEBUG=y
+# CONFIG_SLUB_DEBUG is not set
 CONFIG_COMPAT_BRK=y
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
@@ -154,6 +154,7 @@ CONFIG_HAVE_OPROFILE=y
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
+CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
@@ -415,6 +416,7 @@ CONFIG_MIDAS_COMMON=y
 #
 # CONFIG_BUSFREQ is not set
 CONFIG_BUSFREQ_OPP=y
+# CONFIG_DISPFREQ_OPP is not set
 # CONFIG_DEVFREQ_BUS is not set
 CONFIG_BUSFREQ_QOS_NONE=y
 # CONFIG_BUSFREQ_QOS_1024X600 is not set
@@ -425,7 +427,8 @@ CONFIG_BUSFREQ_QOS_NONE=y
 CONFIG_SEC_THERMISTOR=y
 # CONFIG_EXYNOS_SYSREG_PM is not set
 CONFIG_ANDROID_WIP=y
-CONFIG_COMPACTION_RETRY=y
+# CONFIG_COMPACTION_RETRY is not set
+# CONFIG_COMPACTION_RETRY_DEBUG is not set
 
 #
 # EXYNOS4 Machines
@@ -435,6 +438,8 @@ CONFIG_COMPACTION_RETRY=y
 # CONFIG_MACH_ARMLEX4210 is not set
 # CONFIG_MACH_UNIVERSAL_C210 is not set
 # CONFIG_MACH_NURI is not set
+# CONFIG_MACH_U1_NA_SPR is not set
+# CONFIG_MACH_U1_NA_USCC is not set
 # CONFIG_MACH_U1 is not set
 # CONFIG_MACH_PX is not set
 CONFIG_TARGET_LOCALE_EUR=y
@@ -443,25 +448,53 @@ CONFIG_TARGET_LOCALE_EUR=y
 # CONFIG_TARGET_LOCALE_NAATT_TEMP is not set
 # CONFIG_TARGET_LOCALE_P2EUR_TEMP is not set
 # CONFIG_TARGET_LOCALE_P2TMO_TEMP is not set
+# CONFIG_TARGET_LOCALE_NA is not set
 # CONFIG_TARGET_LOCALE_EUR_U1_NFC is not set
 # CONFIG_TARGET_LOCALE_NTT is not set
+# CONFIG_TARGET_LOCALE_JPN is not set
 # CONFIG_TARGET_LOCALE_CHN is not set
 # CONFIG_TARGET_LOCALE_USA is not set
+# CONFIG_MACH_T0_USA_ATT is not set
+# CONFIG_MACH_T0_USA_TMO is not set
+# CONFIG_MACH_T0_USA_VZW is not set
+# CONFIG_MACH_T0_USA_SPR is not set
+# CONFIG_MACH_T0_USA_USCC is not set
+CONFIG_MACH_T0_EUR_LTE=y
+# CONFIG_MACH_T0_EUR_OPEN is not set
+# CONFIG_MACH_T0_KOR_SKT is not set
+# CONFIG_MACH_T0_KOR_KT is not set
+# CONFIG_MACH_T0_KOR_LGT is not set
+# CONFIG_MACH_T0_JPN_LTE_DCM is not set
+# CONFIG_MACH_T0_CHN_OPEN is not set
+# CONFIG_MACH_T0_CHN_CU is not set
+# CONFIG_MACH_T0_CHN_CU_DUOS is not set
+# CONFIG_MACH_T0_CHN_OPEN_DUOS is not set
+# CONFIG_MACH_T0_CHN_CMCC is not set
+# CONFIG_MACH_T0_CHN_CTC is not set
 # CONFIG_MACH_SMDK4X12 is not set
 CONFIG_MACH_MIDAS=y
 # CONFIG_MACH_M0 is not set
 # CONFIG_MACH_C1 is not set
+# CONFIG_MACH_M3 is not set
 # CONFIG_MACH_P4NOTE is not set
 # CONFIG_MACH_GC1 is not set
 CONFIG_MACH_T0=y
+CONFIG_MACH_T0_LTE=y
+# CONFIG_MACH_IRON is not set
+# CONFIG_MACH_GRANDE is not set
+# CONFIG_MACH_BAFFIN is not set
 # CONFIG_MIDAS_COMMON_BD is not set
 # CONFIG_P4NOTE_00_BD is not set
 # CONFIG_GC1_00_BD is not set
+# CONFIG_T0_00_BD is not set
 CONFIG_T0_04_BD=y
-# CONFIG_SLP is not set
-# CONFIG_GPIO_NAPLES_00_BD is not set
-# CONFIG_EXYNOS4_DEV_TMU is not set
+# CONFIG_IRON_BD is not set
+# CONFIG_GRANDE_BD is not set
 # CONFIG_WRITEBACK_ENABLED is not set
+CONFIG_EXYNOS_SOUND_PLATFORM_DATA=y
+# CONFIG_JACK_FET is not set
+# CONFIG_JACK_GROUND_DET is not set
+CONFIG_SAMSUNG_ANALOG_UART_SWITCH=1
 # CONFIG_EXYNOS5_DEV_BTS is not set
 
 #
@@ -505,20 +538,22 @@ CONFIG_SEC_DEBUG_USER=y
 # CONFIG_SEC_DEBUG_IRQ_EXIT_LOG is not set
 # CONFIG_SEC_DEBUG_AUXILIARY_LOG is not set
 # CONFIG_SEC_DEBUG_FUPLOAD_DUMP_MORE is not set
+# CONFIG_SEC_DEBUG_UMP_ALLOC_FAIL is not set
 # CONFIG_SEC_DEBUG_LIST_CORRUPTION is not set
 # CONFIG_SEC_DEBUG_SYSRQ_B is not set
 # CONFIG_SEC_WATCHDOG_RESET is not set
 CONFIG_SEC_LOG=y
 CONFIG_SEC_LOG_NONCACHED=y
 CONFIG_SEC_LOG_LAST_KMSG=y
-CONFIG_SEC_DEBUG_TIMA_LOG=y
+CONFIG_EHCI_IRQ_DISTRIBUTION=y
+CONFIG_EHCI_MODEM_PORTNUM=2
 
 #
 # Samsung Modem Feature
 #
-# CONFIG_LTE_VIA_SWITCH is not set
+CONFIG_SEC_MODEM_PRIMITIVE=y
 # CONFIG_SEC_MODEM_M0_C2C is not set
-CONFIG_SEC_MODEM_M0=y
+# CONFIG_SEC_MODEM_M0 is not set
 # CONFIG_SEC_MODEM_M0_CTC is not set
 # CONFIG_SEC_MODEM_M1 is not set
 # CONFIG_SEC_MODEM_C1 is not set
@@ -527,37 +562,22 @@ CONFIG_SEC_MODEM_M0=y
 # CONFIG_SEC_MODEM_U1 is not set
 # CONFIG_SEC_MODEM_U1_LGT is not set
 # CONFIG_SEC_MODEM_GAIA is not set
-# CONFIG_SEC_MODEM_GODIVA2 is not set
-
-#
-# GPS device drivers
-#
-CONFIG_GPS_BCMxxxxx=y
-# CONFIG_GPS_BCM47511 is not set
-CONFIG_GPS_BCM4752=y
-# CONFIG_GPS_BCM47521 is not set
-# CONFIG_GPS_CSRxT is not set
-# CONFIG_GPS_GSD4T is not set
-# CONFIG_GPS_GSD5T is not set
-
-#
-# Bluetooth
-#
 # CONFIG_BT_CSR8811 is not set
 # CONFIG_BT_BCM4330 is not set
 CONFIG_BT_BCM4334=y
 # CONFIG_BT_BCM43241 is not set
-
-CONFIG_HID_KK_UPGRADE=y
+# CONFIG_BT_BCM4335 is not set
+# CONFIG_BT_BLUEDROID is not set
 
 #
 # Qualcomm Modem Feature
 #
-# CONFIG_QC_MODEM is not set
-CONFIG_CPU_FREQ_TETHERING=y
+CONFIG_QC_MODEM=y 
+# CONFIG_CPU_FREQ_TETHERING is not set
 # CONFIG_MSM_SUBSYSTEM_RESTART is not set
 # CONFIG_QC_MODEM_MDM9X15 is not set
 # CONFIG_SAMSUNG_PRODUCT_SHIP is not set
+# CONFIG_CORESIGHT_ETM is not set
 
 #
 # Processor Type
@@ -661,7 +681,7 @@ CONFIG_FLATMEM=y
 CONFIG_FLAT_NODE_MEM_MAP=y
 CONFIG_HAVE_MEMBLOCK=y
 CONFIG_PAGEFLAGS_EXTENDED=y
-CONFIG_SPLIT_PTLOCK_CPUS=999999
+CONFIG_SPLIT_PTLOCK_CPUS=4
 CONFIG_COMPACTION=y
 CONFIG_MIGRATION=y
 # CONFIG_PHYS_ADDR_T_64BIT is not set
@@ -681,6 +701,7 @@ CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART=y
 CONFIG_VMWARE_MVP=y
+# CONFIG_VMWARE_MVP_DEBUG is not set
 
 #
 # Boot options
@@ -689,7 +710,7 @@ CONFIG_VMWARE_MVP=y
 CONFIG_ZBOOT_ROM_TEXT=0
 CONFIG_ZBOOT_ROM_BSS=0
 CONFIG_CMDLINE="console=ttySAC2,115200 androidboot.selinux=permissive"
-# CONFIG_CMDLINE_FROM_BOOTLOADER is not set
+CONFIG_CMDLINE_FROM_BOOTLOADER=y
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_XIP_KERNEL is not set
@@ -860,13 +881,12 @@ CONFIG_IPV6_TUNNEL=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 # CONFIG_IPV6_SUBTREES is not set
 # CONFIG_IPV6_MROUTE is not set
+# CONFIG_NETLABEL is not set
 CONFIG_ANDROID_PARANOID_NETWORK=y
 CONFIG_NET_ACTIVITY_STATS=y
-# CONFIG_NETWORK_SECMARK is not set
 # CONFIG_NETWORK_PHY_TIMESTAMPING is not set
 CONFIG_NETFILTER=y
 # CONFIG_NETFILTER_DEBUG is not set
-CONFIG_NETFILTER_ADVANCED=y
 
 #
 # Core Netfilter Configuration
@@ -906,6 +926,7 @@ CONFIG_NETFILTER_XT_CONNMARK=y
 #
 # Xtables targets
 #
+# CONFIG_NETFILTER_XT_TARGET_AUDIT is not set
 # CONFIG_NETFILTER_XT_TARGET_CHECKSUM is not set
 CONFIG_NETFILTER_XT_TARGET_CLASSIFY=y
 CONFIG_NETFILTER_XT_TARGET_CONNMARK=y
@@ -1001,7 +1022,7 @@ CONFIG_NF_NAT_TFTP=y
 CONFIG_NF_NAT_AMANDA=y
 CONFIG_NF_NAT_PPTP=y
 CONFIG_NF_NAT_H323=y
-CONFIG_NF_NAT_SIP=y
+# CONFIG_NF_NAT_SIP is not set
 CONFIG_IP_NF_MANGLE=y
 # CONFIG_IP_NF_TARGET_CLUSTERIP is not set
 # CONFIG_IP_NF_TARGET_ECN is not set
@@ -1033,6 +1054,7 @@ CONFIG_IP6_NF_TARGET_REJECT=y
 CONFIG_IP6_NF_TARGET_REJECT_SKERR=y
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
+# CONFIG_IP6_NF_SECURITY is not set
 # CONFIG_IP_DCCP is not set
 # CONFIG_IP_SCTP is not set
 # CONFIG_RDS is not set
@@ -1112,7 +1134,7 @@ CONFIG_NET_ACT_MIRRED=y
 # CONFIG_NET_CLS_IND is not set
 CONFIG_NET_SCH_FIFO=y
 # CONFIG_DCB is not set
-# CONFIG_DNS_RESOLVER is not set
+CONFIG_DNS_RESOLVER=y
 # CONFIG_BATMAN_ADV is not set
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
@@ -1200,6 +1222,10 @@ CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
 # CONFIG_DMA_SHARED_BUFFER is not set
+CONFIG_SYNC=y
+CONFIG_SW_SYNC=y
+CONFIG_SW_SYNC_USER=y
+# CONFIG_DMA_CMA is not set
 # CONFIG_CONNECTOR is not set
 # CONFIG_MTD is not set
 # CONFIG_PARPORT is not set
@@ -1282,9 +1308,8 @@ CONFIG_UID_STAT=y
 #
 # Samsung Virtual Network 2 (SVNET2)
 #
-CONFIG_SEC_MODEM=y
+# CONFIG_SEC_MODEM is not set
 # CONFIG_UMTS_MODEM_XMM6260 is not set
-CONFIG_UMTS_MODEM_XMM6262=y
 # CONFIG_CDMA_MODEM_CBP71 is not set
 # CONFIG_CDMA_MODEM_CBP72 is not set
 # CONFIG_CDMA_MODEM_CBP82 is not set
@@ -1294,7 +1319,6 @@ CONFIG_UMTS_MODEM_XMM6262=y
 # CONFIG_LINK_DEVICE_MIPI is not set
 # CONFIG_LINK_DEVICE_DPRAM is not set
 # CONFIG_LINK_DEVICE_USB is not set
-CONFIG_LINK_DEVICE_HSIC=y
 # CONFIG_LINK_DEVICE_C2C is not set
 # CONFIG_SIM_DETECT is not set
 
@@ -1370,7 +1394,7 @@ CONFIG_NETDEVICES=y
 # CONFIG_EQUALIZER is not set
 CONFIG_TUN=y
 # CONFIG_VETH is not set
-# CONFIG_MII is not set
+CONFIG_MII=y
 # CONFIG_PHYLIB is not set
 # CONFIG_NET_ETHERNET is not set
 CONFIG_NETDEV_1000=y
@@ -1403,10 +1427,36 @@ CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
 # CONFIG_USB_KAWETH is not set
 # CONFIG_USB_PEGASUS is not set
 # CONFIG_USB_RTL8150 is not set
-# CONFIG_USB_USBNET is not set
+CONFIG_USB_USBNET=y
+CONFIG_USB_NET_AX8817X=y
+CONFIG_USB_NET_CDCETHER=y
+# CONFIG_USB_NET_CDC_EEM is not set
+CONFIG_USB_NET_CDC_NCM=y
+# CONFIG_USB_NET_DM9601 is not set
+# CONFIG_USB_NET_SMSC75XX is not set
+# CONFIG_USB_NET_SMSC95XX is not set
+# CONFIG_USB_NET_GL620A is not set
+CONFIG_USB_NET_NET1080=y
+# CONFIG_USB_NET_PLUSB is not set
+# CONFIG_USB_NET_MCS7830 is not set
+# CONFIG_USB_NET_RNDIS_HOST is not set
+CONFIG_USB_NET_CDC_SUBSET=y
+# CONFIG_USB_ALI_M5632 is not set
+# CONFIG_USB_AN2720 is not set
+CONFIG_USB_BELKIN=y
+CONFIG_USB_ARMLINUX=y
+# CONFIG_USB_EPSON2888 is not set
+# CONFIG_USB_KC2190 is not set
+CONFIG_USB_NET_ZAURUS=y
+# CONFIG_USB_NET_CX82310_ETH is not set
+# CONFIG_USB_NET_KALMIA is not set
 # CONFIG_USB_HSO is not set
+# CONFIG_USB_NET_INT51X1 is not set
 # CONFIG_USB_CDC_PHONET is not set
 # CONFIG_USB_IPHETH is not set
+# CONFIG_USB_SIERRA_NET is not set
+# CONFIG_USB_VL600 is not set
+CONFIG_MSM_RMNET_USB=y
 # CONFIG_WAN is not set
 
 #
@@ -1588,6 +1638,25 @@ CONFIG_SERIAL_8250=y
 CONFIG_SERIAL_8250_NR_UARTS=4
 CONFIG_SERIAL_8250_RUNTIME_UARTS=4
 # CONFIG_SERIAL_8250_EXTENDED is not set
+
+#
+# Diag Support
+#
+CONFIG_DIAG_CHAR=y
+
+#
+# DIAG traffic over USB
+#
+CONFIG_DIAG_OVER_USB=y
+
+#
+# SDIO support for DIAG
+#
+
+#
+# HSIC support for DIAG
+#
+CONFIG_DIAG_HSIC_PIPE=y
 
 #
 # Non-8250 serial port support
@@ -2279,10 +2348,10 @@ CONFIG_SND_USB_AUDIO=y
 # CONFIG_SND_USB_CAIAQ is not set
 # CONFIG_SND_USB_6FIRE is not set
 CONFIG_SND_SOC=y
-CONFIG_SND_SOC_ANDROID_SWITCH=y
 # CONFIG_SND_SOC_CACHE_LZO is not set
 CONFIG_SND_SOC_SAMSUNG=y
 CONFIG_SND_SAMSUNG_I2S=y
+# CONFIG_SND_SOC_SAMSUNG_MIDAS_WM1811 is not set
 CONFIG_SND_SOC_SAMSUNG_T0_WM1811=y
 # CONFIG_SND_SOC_SAMSUNG_USE_DMA_WRAPPER is not set
 CONFIG_SND_SOC_SAMSUNG_I2S_SEC=y
@@ -2293,6 +2362,7 @@ CONFIG_SND_SAMSUNG_ALP=y
 CONFIG_AUDIO_SAMSUNG_MEMSIZE_SRP=1024
 # CONFIG_SND_SAMSUNG_RP_DEBUG is not set
 # CONFIG_SND_SAMSUNG_I2S_MASTER is not set
+# CONFIG_SND_DUOS_MODEM_SWITCH is not set
 # CONFIG_SND_USE_SUB_MIC is not set
 # CONFIG_SND_USE_THIRD_MIC is not set
 # CONFIG_SND_USE_STEREO_SPEAKER is not set
@@ -2303,7 +2373,7 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 CONFIG_SND_SOC_WM_HUBS=y
 CONFIG_SND_SOC_WM8994=y
 CONFIG_SND_SOC_USE_EXTERNAL_MIC_BIAS=y
-CONFIG_EXYNOS_SOUND_PLATFORM_DATA=y
+CONFIG_SND_SOC_ANDROID_SWITCH=y
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
@@ -2381,8 +2451,6 @@ CONFIG_HID_THRUSTMASTER=y
 # CONFIG_THRUSTMASTER_FF is not set
 CONFIG_HID_WACOM=y
 CONFIG_HID_WACOM_POWER_SUPPLY=y
-CONFIG_HID_ZAGG=y
-CONFIG_HID_SYNAPTICS_BT=y
 CONFIG_HID_ZEROPLUS=y
 # CONFIG_ZEROPLUS_FF is not set
 CONFIG_HID_ZYDACRON=y
@@ -2514,7 +2582,7 @@ CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_PL2303=y
 # CONFIG_USB_SERIAL_OTI6858 is not set
 # CONFIG_USB_SERIAL_QCAUX is not set
-# CONFIG_USB_SERIAL_QUALCOMM is not set
+CONFIG_USB_SERIAL_QUALCOMM=y
 # CONFIG_USB_SERIAL_SPCP8X5 is not set
 # CONFIG_USB_SERIAL_HP4X is not set
 # CONFIG_USB_SERIAL_SAFE is not set
@@ -2524,14 +2592,15 @@ CONFIG_USB_SERIAL_PL2303=y
 # CONFIG_USB_SERIAL_TI is not set
 # CONFIG_USB_SERIAL_CYBERJACK is not set
 # CONFIG_USB_SERIAL_XIRCOM is not set
+CONFIG_USB_SERIAL_WWAN=y
 # CONFIG_USB_SERIAL_OPTION is not set
 # CONFIG_USB_SERIAL_OMNINET is not set
 # CONFIG_USB_SERIAL_OPTICON is not set
 # CONFIG_USB_SERIAL_VIVOPAY_SERIAL is not set
 # CONFIG_USB_SERIAL_ZIO is not set
 # CONFIG_USB_SERIAL_SSU100 is not set
+# CONFIG_USB_SERIAL_CSVT is not set
 # CONFIG_USB_SERIAL_DEBUG is not set
-CONFIG_USB_SERIAL_CSVT=y
 
 #
 # USB Miscellaneous drivers
@@ -2556,8 +2625,9 @@ CONFIG_USB_SERIAL_CSVT=y
 # CONFIG_USB_TEST is not set
 # CONFIG_USB_ISIGHTFW is not set
 # CONFIG_USB_YUREX is not set
-# CONFIG_USB_QCOM_DIAG_BRIDGE is not set
-# CONFIG_USB_QCOM_MDM_BRIDGE is not set
+CONFIG_USB_QCOM_DIAG_BRIDGE=y
+# CONFIG_USB_QCOM_DIAG_BRIDGE_TEST is not set
+CONFIG_USB_QCOM_MDM_BRIDGE=y
 CONFIG_USB_GADGET=y
 # CONFIG_USB_GADGET_DEBUG is not set
 # CONFIG_USB_GADGET_DEBUG_FILES is not set
@@ -2664,7 +2734,7 @@ CONFIG_LEDS_AN30259A=y
 # CONFIG_LEDS_REGULATOR is not set
 # CONFIG_LEDS_BD2802 is not set
 # CONFIG_LEDS_LT3593 is not set
-CONFIG_LEDS_SWITCH=y
+# CONFIG_LEDS_SWITCH is not set
 CONFIG_LEDS_MAX77693=y
 # CONFIG_LEDS_MAX8997 is not set
 # CONFIG_LEDS_AAT1290A is not set
@@ -2818,38 +2888,20 @@ CONFIG_CLKDEV_LOOKUP=y
 CONFIG_VIBETONZ=y
 CONFIG_MOTOR_DRV_MAX77693=y
 # CONFIG_MOTOR_DRV_ISA1200 is not set
-CONFIG_SAMSUNG_MODULES=y
-CONFIG_FM_RADIO=y
-# CONFIG_FM_SI4709 is not set
-CONFIG_FM_SI4705=y
-
-CONFIG_SENSORS_SSP=y
+# CONFIG_FM_RADIO is not set
+# CONFIG_SENSORS_CORE is not set
 CONFIG_SENSORS_SSP_ATMEL=y
-# CONFIG_SENSORS_SSP_STM is not set
 CONFIG_SENSORS_SYSFS=y
+CONFIG_SENSORS_SSP=y
+CONFIG_SENSORS_SSP_LSM330=y
+CONFIG_SENSORS_SSP_AK8963C=y
+CONFIG_SENSORS_SSP_CM36651=y
+CONFIG_SENSORS_SSP_BMP182=y
+CONFIG_SENSORS_SSP_AT32UC3L0128=y
 CONFIG_SENSORS_SSP_ACCELEROMETER_POSITION=7
 CONFIG_SENSORS_SSP_GYROSCOPE_POSITION=7
 CONFIG_SENSORS_SSP_MAGNETOMETER_POSITION=7
-CONFIG_SENSORS_SSP_LSM330=y
-CONFIG_SENSORS_SSP_CM36651=y
-CONFIG_SENSORS_SSP_AK8963C=y
-CONFIG_SENSORS_SSP_BMP182=y
-CONFIG_SENSORS_SSP_AT32UC3L0128=y
 CONFIG_SENSORS_SSP_SENSORHUB=y
-# CONFIG_SENSORS_AK8975C is not set
-# CONFIG_SENSORS_BMP180 is not set
-# CONFIG_SENSORS_CM3663 is not set
-# CONFIG_SENSORS_PAS2M110 is not set
-# CONFIG_SENSORS_BMA254 is not set
-# CONFIG_SENSORS_TAOS is not set
-# CONFIG_SENSORS_GP2A is not set
-# CONFIG_SENSORS_GP2A_ANALOG is not set
-# CONFIG_SENSORS_CM36651 is not set
-# CONFIG_SENSORS_BH1721 is not set
-# CONFIG_SENSORS_K3DH is not set
-# CONFIG_SENSORS_K3G is not set
-# CONFIG_SENSORS_LSM330DLC is not set
-# CONFIG_SENSORS_LPS331 is not set
 # CONFIG_PM_DEVFREQ is not set
 # CONFIG_SAMSUNG_PHONE_SVNET is not set
 CONFIG_ACCESSORY=y
@@ -2879,15 +2931,18 @@ CONFIG_BARCODE_EMUL_ICE4=y
 # File systems
 #
 CONFIG_EXT2_FS=y
-# CONFIG_EXT2_FS_XATTR is not set
+CONFIG_EXT2_FS_XATTR=y
 # CONFIG_EXT2_FS_XIP is not set
 # CONFIG_EXT3_FS is not set
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_USE_FOR_EXT23=y
-# CONFIG_EXT4_FS_XATTR is not set
+CONFIG_EXT4_FS_XATTR=y
+# CONFIG_EXT4_FS_POSIX_ACL is not set
+CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_JBD2=y
 # CONFIG_JBD2_DEBUG is not set
+CONFIG_FS_MBCACHE=y
 # CONFIG_REISERFS_FS is not set
 # CONFIG_JFS_FS is not set
 # CONFIG_XFS_FS is not set
@@ -3061,15 +3116,13 @@ CONFIG_SCHED_DEBUG=y
 CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_OBJECTS is not set
-CONFIG_SLUB_DEBUG_ON=y
 # CONFIG_SLUB_STATS is not set
 # CONFIG_DEBUG_KMEMLEAK is not set
-CONFIG_DEBUG_PREEMPT=y
-CONFIG_DEBUG_RT_MUTEXES=y
-CONFIG_DEBUG_PI_LIST=y
+# CONFIG_DEBUG_PREEMPT is not set
+# CONFIG_DEBUG_RT_MUTEXES is not set
 # CONFIG_RT_MUTEX_TESTER is not set
-CONFIG_DEBUG_SPINLOCK=y
-CONFIG_DEBUG_MUTEXES=y
+# CONFIG_DEBUG_SPINLOCK is not set
+# CONFIG_DEBUG_MUTEXES is not set
 # CONFIG_DEBUG_LOCK_ALLOC is not set
 # CONFIG_PROVE_LOCKING is not set
 # CONFIG_SPARSE_RCU_POINTER is not set
@@ -3163,11 +3216,41 @@ CONFIG_DEBUG_S3C_UART=2
 CONFIG_KEYS=y
 CONFIG_KEYS_DEBUG_PROC_KEYS=y
 # CONFIG_SECURITY_DMESG_RESTRICT is not set
-# CONFIG_SECURITY is not set
+CONFIG_SECURITY=y
 # CONFIG_SECURITYFS is not set
-CONFIG_DEFAULT_SECURITY_DAC=y
-CONFIG_DEFAULT_SECURITY=""
+CONFIG_SECURITY_NETWORK=y
+# CONFIG_SECURITY_NETWORK_XFRM is not set
+# CONFIG_SECURITY_PATH is not set
+CONFIG_LSM_MMAP_MIN_ADDR=4096
+CONFIG_SECURITY_SELINUX=y
+# CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
+# CONFIG_SECURITY_SELINUX_DISABLE is not set
+CONFIG_SECURITY_SELINUX_DEVELOP=y
+CONFIG_SECURITY_SELINUX_AVC_STATS=y
+CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
+# CONFIG_SECURITY_SELINUX_POLICYDB_VERSION_MAX is not set
+# CONFIG_SECURITY_TOMOYO is not set
+# CONFIG_SECURITY_APPARMOR is not set
+# CONFIG_IMA is not set
+CONFIG_DEFAULT_SECURITY_SELINUX=y
+# CONFIG_DEFAULT_SECURITY_DAC is not set
+CONFIG_DEFAULT_SECURITY="selinux"
 CONFIG_CRYPTO=y
+
+# SE Android Network Access Controls
+CONFIG_NETWORK_SECMARK=y
+CONFIG_NF_CONNTRACK_SECMARK=y
+CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=y
+CONFIG_NETFILTER_XT_TARGET_SECMARK=y
+# Add security table to netfilter config
+CONFIG_NETFILTER_ADVANCED=y
+CONFIG_IP_NF_SECURITY=y
+# Support auditd for SE Android
+CONFIG_AUDITSYSCALL=y
+CONFIG_SEC_AVC_LOG=y
+
+# TIMA support
+CONFIG_TIMA_LOG=y
 
 #
 # Crypto core or helper
@@ -3224,7 +3307,7 @@ CONFIG_CRYPTO_HMAC=y
 #
 CONFIG_CRYPTO_CRC32C=y
 # CONFIG_CRYPTO_GHASH is not set
-# CONFIG_CRYPTO_MD4 is not set
+CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_MICHAEL_MIC is not set
 # CONFIG_CRYPTO_RMD128 is not set
@@ -3272,7 +3355,7 @@ CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 CONFIG_CRYPTO_HW=y
 # CONFIG_CRYPTO_S5P_DEV_ACE is not set
-CONFIG_BINARY_PRINTF=y
+# CONFIG_BINARY_PRINTF is not set
 
 #
 # Library routines
@@ -3285,6 +3368,7 @@ CONFIG_CRC16=y
 CONFIG_CRC32=y
 # CONFIG_CRC7 is not set
 CONFIG_LIBCRC32C=y
+CONFIG_AUDIT_GENERIC=y
 CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 # CONFIG_XZ_DEC is not set
@@ -3309,36 +3393,6 @@ CONFIG_NLATTR=y
 # Auto-generated configs from variations
 #
 CONFIG_FADV_NOACTIVE=y
-
-#
-# SE Android
-#
-CONFIG_EXT2_FS_XATTR=y
-CONFIG_EXT2_FS_SECURITY=y
-CONFIG_EXT4_FS_XATTR=y
-CONFIG_EXT4_FS_SECURITY=y
-CONFIG_AUDIT=y
-CONFIG_SECURITY=y
-CONFIG_LSM_MMAP_MIN_ADDR=4096
-CONFIG_SECURITY_NETWORK=y
-CONFIG_SECURITY_SELINUX=y
-CONFIG_SECURITY_SELINUX_BOOTPARAM=y
-CONFIG_SECURITY_SELINUX_BOOTPARAM_VALUE=0
-CONFIG_DEFAULT_SECURITY_SELINUX=y
-# SE Android Network Access Controls
-CONFIG_NETWORK_SECMARK=y
-CONFIG_NF_CONNTRACK_SECMARK=y
-CONFIG_NETFILTER_XT_TARGET_CONNSECMARK=y
-CONFIG_NETFILTER_XT_TARGET_SECMARK=y
-# Add security table to netfilter config
-CONFIG_NETFILTER_ADVANCED=y
-CONFIG_IP_NF_SECURITY=y
-# Support auditd for SE Android
-CONFIG_AUDITSYSCALL=y
-CONFIG_SEC_AVC_LOG=y
-
-# TIMA support
-CONFIG_TIMA_LOG=y
 
 # Rooting prevention
 # CONFIG_SEC_RESTRICT_ROOTING is not set
